--- a/frontend/src/css/dropdown.css
+++ b/frontend/src/css/dropdown.css
@@ -39,42 +39,10 @@
   padding: 1rem 0 1rem 0;
 }
 
-
-.dropdown:hover .menu {
-  z-index: 999;
-  display: block;
-  display: grid;
-  justify-items: start;
-  background-color: white;
-  position: absolute;
-  border-radius: 10px;
-  border: 1px solid black;
-  width: 250px;
-
-}
-
-.dropdownTags:hover .menu {
-  z-index: 999;
-  display: grid;
-  justify-items: start;
-  background-color: white;
-  position: absolute;
-  border-radius: 10px;
-  border: 1px solid black;
-  width: 250px;
-}
-
-.dropdownCat:hover .menu {
-  z-index: 999;
-  display: grid;
-  justify-items: start;
-  background-color: white;
-  position: absolute;
-  border-radius: 10px;
-  border: 1px solid black;
-  width: 250px;
-}
-.dropdownDate:hover .menu {
+.dropdown:hover .dropdown-list,
+.dropdownTags:hover .dropdown-list,
+.dropdownCat:hover .dropdown-list,
+.dropdownDate:hover .dropdown-list {
   z-index: 999;
   display: grid;
   justify-items: start;
@@ -96,13 +64,13 @@
 }
 
 .cat-list:hover {
-  background-color: #fdd68a;
+  background-color: var(--ifm-color-primary-light);
   font-weight: 700;
   width: 100%;
 }
 
 .date-list:hover {
-  background-color: #fdd68a;
+  background-color: var(--ifm-color-primary-light);
   font-weight: 700;
   width: 100%;
 }
@@ -118,13 +86,12 @@
 }
 
 .difficulty-list:hover {
-  background-color: #fdd68a;
+  background-color: var(--ifm-color-primary-light);
   font-weight: 700;
   width: 100%;
 }
 
-
-.difficulty-list{
+.difficulty-list {
   margin: 0;
   line-height: 3rem;
   background-color: white;
@@ -134,8 +101,7 @@
   text-align: left;
 }
 
-
-.menu {
+.dropdown-list {
   display: none;
 }
 
@@ -168,8 +134,8 @@
   text-align: left;
 }
 
-.content-tags:hover{
-  background-color: #fdd68a;
+.content-tags:hover {
+  background-color: var(--ifm-color-primary-light);
   font-weight: 700;
   width: 100%;
 }
@@ -181,11 +147,10 @@
 }
 
 .content:hover {
-  background-color: #fdd68a;
+  background-color: var(--ifm-color-primary-light);
 }
 
 .content:focus {
-  border-left: 4px solid #fcc55b;
+  border-left: 4px solid var(--ifm-color-primary);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-
