Add comments and class for select element on hover

--- a/frontend/src/css/dropdown.css
+++ b/frontend/src/css/dropdown.css
@@ -26,6 +26,10 @@
   position: relative;
 }
 
+.dropdown select:hover {
+  border: 2px solid black;
+}
+
 .dropdown-selection {
   z-index: 999;
   display: grid;
