--- a/frontend/src/css/card.css
+++ b/frontend/src/css/card.css
@@ -1,6 +1,4 @@
 .cards-container {
-  display: flex;
-  flex-direction: column;
   padding-top: 20px;
   padding-bottom: 20px;
   z-index: 99;
@@ -12,8 +10,6 @@
   background-color: white;
   box-shadow: 4px 4px 4px rgba(41, 38, 32, 0.04);
   padding: 15px;
-  padding-bottom: 40px;
-  margin-bottom: 26px;
   border: 2px solid transparent;
 }
 
@@ -36,6 +32,8 @@
 
 .card p {
   color: #5e5d5b;
+  padding: 0;
+  margin: 0;
 }
 
 a:visited {
@@ -46,6 +44,12 @@ a:visited {
 .level {
   position: bottom, left;
   margin-top: 2rem;
+}
+
+.card-level-tags-container {
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .tags-container {
