--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -11,6 +11,7 @@
   font-size: 6.4rem;
   font-weight: 700;
   padding: 5.6rem 0 5.6rem 0;
+  color: var(--dark);
 }
 
 .home-link {
@@ -26,7 +27,7 @@
 
 .home-wrapper input[type='email'] {
   padding: 10px 8px;
-  width: 287px;
+  width: 247px;
   height: 40px;
   background-color: #f0f0ef;
   border-radius: 10px;
@@ -51,4 +52,9 @@
   -moz-box-shadow: 0 0 10px var(--ifm-color-secondary);
   -webkit-box-shadow: 0 0 10px var(--ifm-color-secondary);
   box-shadow: 0 0 10px var(--ifm-color-secondary);
+}
+
+.home-subtitle {
+  color: var(--dark);
+  font-size: 2.6rem;
 }
