--- a/frontend/src/css/navbar.css
+++ b/frontend/src/css/navbar.css
@@ -15,8 +15,8 @@
 }
 
 .navbar__link {
-  font-size: 2rem;
-  padding: 6px 8px;
+  font-size: 1.6rem;
+  padding-right: 12px;
 }
 
 .navbar a:hover {
@@ -29,24 +29,15 @@
   font-weight: 700;
 }
 
-.navbar .button {
-  font-weight: 700;
-  font-size: 1.6rem;
-  padding: 1rem 1.8rem 1rem 1.8rem;
-  border-radius: 8px;
-  margin-left: 1.8rem;
-}
-
 .nav-button {
   width: 178px;
   height: 40px;
   font-size: 16px;
   font-weight: 700;
-  text-align: center;
   background-color: var(--ifm-color-secondary);
   border-radius: 8px;
   border: none;
-  margin-left: 2rem;
+  padding: 8px 0 0 16px;
 }
 
 .nav-button:hover {
@@ -55,14 +46,14 @@
   box-shadow: 0 0 10px var(--ifm-color-secondary);
 }
 
-.navbar-sidebar__item .nav-button {
+/* .navbar-sidebar__item .nav-button {
   width: 178px;
   height: 40px;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: 700;
   text-align: center;
   background-color: var(--ifm-color-secondary);
   border-radius: 8px;
   border: none;
   margin-left: 2rem;
-}
+} */
