Add search.css styles for searchbar

--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -14,6 +14,7 @@
 @import 'index.css';
 @import 'navbar.css';
 @import 'resources.css';
+@import 'search.css';
 @import 'signup.css';
 @import 'thanks.css';
 @import 'tips.css';
