Add dropdown-markdown style to custom

--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -9,6 +9,7 @@
 @import 'community.css';
 @import 'icard.css';
 @import 'dropdown.css';
+@import 'dropdown-markdown.css';
 @import 'footer.css';
 @import 'home.css';
 @import 'index.css';
