--- a/frontend/src/css/card.css
+++ b/frontend/src/css/card.css
@@ -85,6 +85,8 @@ a:visited {
 
 img[src*='#author-img'] {
   width: 150px;
-  border: 3px solid var(--ifm-color-secondary);
+  border: 3px solid var(--ifm-color-primary);
   border-radius: 50%;
 }
+
+
