Add custom sidebar styles

--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -16,6 +16,7 @@
 @import 'navbar.css';
 @import 'resources.css';
 @import 'search.css';
+@import 'sidebar.css';
 @import 'signup.css';
 @import 'thanks.css';
 @import 'tips.css';
