--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -41,3 +41,10 @@
         max-width: 200px;
     }
 }
+
+.center-filters {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
