Leaving sections transparent to apply background

--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -56,4 +56,16 @@
     }
 }
 
+.footer {
+    background-color: transparent;
+}
+
+.navbar {
+    background-color: transparent;
+}
+
+.hero {
+    background-color: transparent;
+}
+
 
