--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -60,8 +60,8 @@
     background-color: transparent;
 }
 
-.navbar {
-    background-color: transparent;
+.footer__link-item {
+    color: black;
 }
 
 .hero {
@@ -69,3 +69,11 @@
 }
 
 
+/* Background for actual tips */
+.docs-wrapper {
+    background-image: url("../../static/img/backgrounds/tips-background.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-attachment: fixed;
+}
