--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -8,13 +8,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-    --ifm-color-primary: #2e8555;
-    --ifm-color-primary-dark: #29784c;
-    --ifm-color-primary-darker: #277148;
-    --ifm-color-primary-darkest: #205d3b;
-    --ifm-color-primary-light: #33925d;
-    --ifm-color-primary-lighter: #359962;
-    --ifm-color-primary-lightest: #3cad6e;
+    --ifm-color-primary: #fcc55b;
+    --ifm-color-primary-dark: #fbb939;
+    --ifm-color-primary-darker: #fbb328;
+    --ifm-color-primary-darkest: #ec9d04;
+    --ifm-color-primary-light: #fdd17d;
+    --ifm-color-primary-lighter: #fdd78e;
+    --ifm-color-primary-lightest: #fee9c0;
     --ifm-code-font-size: 95%;
     --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
