--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -8,26 +8,26 @@
 
 /* You can override the default Infima variables here. */
 :root {
-    --ifm-color-primary: #fcc55b;
-    --ifm-color-primary-dark: #fbb939;
-    --ifm-color-primary-darker: #fbb328;
-    --ifm-color-primary-darkest: #ec9d04;
-    --ifm-color-primary-light: #fdd17d;
-    --ifm-color-primary-lighter: #fdd78e;
-    --ifm-color-primary-lightest: #fee9c0;
+    --ifm-color-primary: #ee805a;
+    --ifm-color-primary-dark: #eb693c;
+    --ifm-color-primary-darker: #e95e2d;
+    --ifm-color-primary-darkest: #d04515;
+    --ifm-color-primary-light: #f19778;
+    --ifm-color-primary-lighter: #f3a287;
+    --ifm-color-primary-lightest: #f7c5b3;
     --ifm-code-font-size: 95%;
     --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-    --ifm-color-primary: #25c2a0;
-    --ifm-color-primary-dark: #21af90;
-    --ifm-color-primary-darker: #1fa588;
-    --ifm-color-primary-darkest: #1a8870;
-    --ifm-color-primary-light: #29d5b0;
-    --ifm-color-primary-lighter: #32d8b4;
-    --ifm-color-primary-lightest: #4fddbf;
+    --ifm-color-primary: #3ddc91;
+    --ifm-color-primary-dark: #27d683;
+    --ifm-color-primary-darker: #25ca7c;
+    --ifm-color-primary-darkest: #1ea766;
+    --ifm-color-primary-light: #55e09e;
+    --ifm-color-primary-lighter: #61e2a5;
+    --ifm-color-primary-lightest: #84e9b9;
     --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
@@ -65,9 +65,16 @@
 }
 
 
-/* Background for actual tips */
-.docs-wrapper {
-    background-image: url("../../static/img/backgrounds/tips-background.svg");
+#__docusaurus {
+    background-image: url("../../static/img/backgrounds/background-light.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-attachment: fixed;
+}
+
+[data-theme='dark'] #__docusaurus {
+    background-image: url("../../static/img/backgrounds/background-dark.svg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
