--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -80,3 +80,28 @@
     background-position: top center;
     background-attachment: fixed;
 }
+
+.navbar-sidebar .nav-button {
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+}
+
+.nav-button {
+    width: 178px;
+    height: 40px;
+    font-size: 16px;
+    font-weight: 700;
+    background-color: var(--ifm-color-primary);
+    border-radius: 8px;
+    border: none;
+    padding: 8px 0 0 16px;
+    color: var(--ifm-color-content-inverse);
+}
+
+.nav-button:hover {
+    -moz-box-shadow: 0 0 10px var(--ifm-color-primary-dark);
+    -webkit-box-shadow: 0 0 10px var(--ifm-color-primary-dark);
+    box-shadow: 0 0 10px var(--ifm-color-primary-dark);
+    color: var(--ifm-color-content-inverse);
+}
